Implement @RestControllerAdvice for global error handling